<resources>
    <string name="app_name">MeuPrimeiroAppDio4</string>
    <string name="btn_calcular">Calcular</string>
    <string name="preco">Preço</string>
    <string name="potencia">Potencia</string>
    <string name="recarga">Recarga</string>
    <string name="bateria">Bateria</string>
    <string name="carros">Carros</string>
    <string name="favoritos">Favorito</string>
    <string name="title">Eletric Car</string>

    <string name="title_calcular_autonomia">Calcular Autonomia</string>
    <string name="preco_kwh">Kwh</string>
    <string name="km_percorrido">Km percorrido</string>
</resources>

